raw/scss/_index.scss
.campaign {
  .splash {
    background-image: url('../bg/raffle.jpg');
  }

  @include media($mobile) {
    .splash-greeting {
      background-image: url('../bg/raffle.jpg');
    }
  }

  .main {
    @include media($mobile) {
      padding-top: 2em;
    }
  }
}

.index {
  .splash {
    background-image: url('../bg/index.jpg');
  }

  @include media($mobile) {
    .splash-greeting {
      background-image: url('../bg/index.jpg');
    }
  }

  .main {
    @include media($mobile) {
      background-color: #f9f9f9;
      padding-top: 1em;
    }
  }
}

.index, .campaign {
  .splash {
    background-color: lighten($black, 20%);
    background-position-x: 50%;

    @include media($mobile) {
      background-image: none;
    }
  }

  .splash-header {
    font-size: 3.2em;
    padding-bottom: .5em;

    // arbitrary breakpoint to make text
    // look pretty
    @media screen and (max-width: 925px) {
      font-size: 2.8em;
    }

    @include media($tablet-carousel) {
      font-size: 3em;
    }

    @include media($mobile) {
      font-size: 1.8em;
      // following two properties are useful
      // when applying dark overlay via :before
      position: relative;
      z-index: 2;
    }
  }

  .splash-greeting {
    text-align: left;

    @include span-columns(7);
      @include shift(0);

    @include media($tablet-carousel) {
      @include span-columns(12);
      text-align: center;
    }

    @include media($mobile) {
      background-position-x: 50%;
      background-size: cover;
      position: relative;

      // to make the text stand out
      &:before {
        background-color: rgba($black, .4);
        content: '';
        height: 100%;
        left: 0;
        position: absolute;
        top: 0;
        width: 100%;
        z-index: 1;
      }
    }
  }

  .splash-info {
    position: relative;
    z-index: 2;

    @include media($tablet-carousel) {
      display: none;
    }
  }

  .splash-wrapper {
    @include media($tablet-carousel) {
      padding: 2em 1em;
    }

    @include media($mobile) {
      padding: 0;
    }
  }

  .section {
    h3 {
      margin-bottom: .5em;
    }

    p {
      margin: 1em 0;
    }
  }

  .give-more {
    margin-top: 2em;

    h5 {
      margin-bottom: 1em;
    }
  }

  .top {
    margin-bottom: 3em;

    @include media($mobile) {
      margin-bottom: 1em;
      padding: 0 1em;
    }
  }

  .raffle-logo {
    display: block;
    width: 100%;
    margin: 0 auto;
    max-width: 450px;
  }
}

